[TEST] Added tests for the allocate method and Constuctor of the Heap